Made some text changes for clarity

--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -5,7 +5,8 @@ output:
     keep_md: true
 ---
 
-```{r, echo=F, message=FALSE}
+Load up the supporting libraries to support the analysis.
+```{r, message=FALSE}
 library(RCurl)
 library(ggplot2)
 library(dplyr)
@@ -13,7 +14,7 @@ library(dplyr)
 
 
 ## Loading and preprocessing the data
-
+Load the data from the activity zip file and unzip the file to support reading into the data frame.
 
 ```{r load_data}
 unzip(zipfile="activity.zip")
@@ -24,12 +25,9 @@ activity_data <- read.csv("activity.csv")
 
 ## What is mean total number of steps taken per day?
 
-
-
+***Analysis Note:*** Removed the NA values and ignoring the missing values for the analysis.
 ```{r analyzeStepMeans, warning=FALSE, message=FALSE}
 
-library(ggplot2)
-library(dplyr)
 steps_data <- aggregate(steps ~ date, data=activity_data, sum, na.rm = TRUE)
 ggplot(steps_data, aes(x=steps)) +geom_histogram(col="blue", fill="blue") 
 
@@ -39,14 +37,14 @@ median_steps <- median(steps_data$steps, na.rm=TRUE)
 ```
 
 
-
 |             | Mean  | Median |
 |-------------|-------|--------|
 | Daily Steps | `r formatC(mean_steps, format="d", big.mark=',')` | `r formatC(median_steps, format="d", big.mark=',')` |
 
+
 ## What is the average daily activity pattern?
 ```{r averageDailyActivityPattern}
-library(ggplot2)
+
 dailyStepsByInterval <- activity_data %>% filter(!is.na(steps)) %>% group_by(interval) %>% summarize(steps = mean(steps))
 ggplot(dailyStepsByInterval, aes(x=interval, y=steps)) + geom_line() + xlab("5 minute interval")+ylab("Average number of steps taken")
 
@@ -54,7 +52,7 @@ maxSteps <- dailyStepsByInterval[which.max(dailyStepsByInterval$steps),]
 
 ```
 
-On average across all the days in the dataset the 5-minute interval, contains the maximum number of steps?
+On average across all the days in the dataset the 5-minute interval, the table below contains the maximum number of steps:
 
 | Max Interval         | Max Number of steps |
 |----------------------|---------------------|
@@ -66,7 +64,7 @@ On average across all the days in the dataset the 5-minute interval, contains th
 
 Note that there are a number of days/intervals where there are missing values (coded as NA). The presence of missing days may introduce bias into some calculations or summaries of the data.
 
-Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+The following table contains a summary of rows with missing row values and those rows with values present (NOT NA) in the dataset (i.e. the total number of rows with NAs):
 ```{r}
 missingStepValues <- is.na(activity_data$steps)
 missingCounts <- table(missingStepValues)
@@ -106,6 +104,7 @@ median_steps <- median(adj_total_steps, na.rm=T)
 |-------------|-------|--------|
 | Daily Steps | `r formatC(mean_steps, format="d", big.mark=',')` | `r formatC(median_steps, format="d", big.mark=',')` |
 
+NOTE: Inserting the mean interval value when a NA step value is encountered did not for this dataset impact the calculated means and median values.
 
 ## Are there differences in activity patterns between weekdays and weekends?
 ```{r}
